# game-tools

./: REAMDE.md
4md-converter/: CMakeLists.txt  Readme.md
4md-converter/src/: 4MDConverter.c
aoe-gfxtool/: Makefile  README.md  gfxtool.c  palette.c  palette.h  qdbmp.c  qdbmp.h
aoe-shptool/: .gitignore  Makefile  README.md  SHP_Format.md  shptool.c  slp2shp.col
goldsrc-bsp-light-trim/src/: BspFile.cpp  BspFile.hpp  CMakeLists.txt  Face.cpp  Lightning.cpp  Lightning.hpp  main.cpp
goldsrc-bsp-lit-cp/src/: CMakeLists.txt  face.c  face.h  main.c  textures.h  vector.h
goldsrc-bsp-lit-replace/src/: CMakeLists.txt  CMakeSettings.json  bspfile.h  scaling.c  texinfo.h  vertex.c
goldsrc-bsp-model-trim/src/: BspFile.cpp  BspModel.cpp  BspModel.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Face.hpp  main.cpp
goldsrc-bsp-tex-clean/src/: bspfile.c  bspplane.h  color.h  face.c  main.c  scaling.h  texinfo.c  textures.c  vector.h
goldsrc-bsp-tex-clean/src/qdbmp/: qdbmp.c  qdbmp.h
goldsrc-bsp-tex-opt/src/: CMakeLists.txt  bspfile.h  edge.h  face.c  face.h  lightmap.c  main.c  texinfo.c  textures.c  vertex.h
imf-dbl/: .directory  README.md  imf.c  imf.h  main.c
kam-pytools/: BattleMultiplierTest.py  DefineReader.py  MapElementReader.py  MissionEncrypter.py  PatternReader.py  SoundInfo.py  SoundsDatParser.py  UnitDefineReader.py
kam-rxbld/: CMakeLists.txt  Graphic.c  Graphic.h  GraphicIndex.c  GraphicIndex.h  Palette.c  Palette.h  main.c  utils.c  utils.h
kam-rxbld/qdbmp_1.0.0/: qdbmp.c
mus-dbl/: .directory  README.md  main.c  mus.c  mus.h  musdbl
